--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@ title: {{ site.name }}
   <h1>Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+      <li>
+        <span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+        <span>Tags: 
+            {% for tag in post.tags %}
+            <span class="tag">{{tag}}</span>
+          {% endfor %}
+        </span>
+      </li>
     {% endfor %}
   </ul>
 </div>
