--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@ title: {{ site.name }}
 ---
 
 <div id="home">
-  <h1>Posts</h1>
-  <ul class="posts">
+  <h1>Blog</h1>
+  <div class="posts">
     {% for post in site.posts %}
-      <li>
-        <span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+      <div class="card padding-10">
+        <div>
+            <a href="{{ site.baseurl }}{{ post.url }}" class="title">{{ post.title }}</a>
+        </div>
+        <span>{{ post.date | date_to_string }}</span>
+        <br/>
         <span>Tags: 
             {% for tag in post.tags %}
-            <span class="tag">{{tag}}</span>
+            <a class="tag">{{tag}}</a>
           {% endfor %}
         </span>
-      </li>
+      </div>
     {% endfor %}
-  </ul>
+  </div>
 </div>
