--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
         <div>
             <a href="{{ site.baseurl }}{{ post.url }}" class="title">{{ post.title }}</a>
         </div>
-        <a href="{{ site.baseurl }}{{ post.url }}#disqus_thread" class="title"></a>
+        <a href="{{ site.baseurl }}{{ post.url }}#disqus_thread"></a>
         {% include reading_time.html post=post.content %}
         <br/>
         <span>{{ post.date | date_to_string }}</span>
