--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ layout: default
             <a href="{{ site.baseurl }}{{ post.url }}" class="title">{{ post.title }}</a>
         </div>
         <a href="{{ site.baseurl }}{{ post.url }}#disqus_thread"></a>
+        <span>{{ post.tagline }}</span>
         {% include reading_time.html post=post.content %}
         <br/>
         <span>{{ post.date | date_to_string }}</span>
