--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ layout: default
         <span>{{ post.tagline }}</span>
         {% include reading_time.html post=post.content %}
         <br/>
-        <span>{{ post.date | date_to_string }}</span>
+        <span>{{ post.date | date_to_long_string }}</span>
         <br/>
-        <span>Tags: 
+        <!--<span>Tags: 
             {% for tag in post.tags %}
             <a class="tag">{{tag}}</a>
           {% endfor %}
-        </span>
+        </span>-->
       </div>
     {% endfor %}
   </div>
