No comments count on homepage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
         <div>
             <a href="{{ site.baseurl }}{{ post.url }}" class="title">{{ post.title }}</a>
         </div>
-        <a href="{{ site.baseurl }}{{ post.url }}#disqus_thread"></a>
+        <!--<a href="{{ site.baseurl }}{{ post.url }}#disqus_thread"></a> -->
         <span>{{ post.tagline }}</span>
         {% include reading_time.html post=post.content %}
         <br/>
